did I add these files?

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Impact Game</title>
 	<style type="text/css">
 		html,body {
-			background-color: #000;
+			background-color: #fff;
 			color: #fff;
 			font-family: helvetica, arial, sans-serif;
 			margin: 0;
@@ -27,6 +27,6 @@
 	<!-- <script type="text/javascript" src="game.min.js"></script> -->
 </head>
 <body>
-	<canvas id="canvas"></canvas>
+	<canvas id="canvas" style="border: 10px grey dotted"></canvas>
 </body>
 </html>
