--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style type="text/css">
 		html,body {
 			background-color: #fff;
-			color: #fff;
+			color: #000000;
 			font-family: helvetica, arial, sans-serif;
 			margin: 0;
 			padding: 0;
@@ -16,17 +16,19 @@
 			position: absolute;
 			left: 0;
 			right: 0;
-			top: 0;
+			top: 12px;
 			bottom: 0;
 			margin: auto;
 		}
 	</style>
 
-	<script type="text/javascript" src="lib/impact/impact.js"></script>
-	<script type="text/javascript" src="lib/game/main.js"></script>
-	<!-- <script type="text/javascript" src="game.min.js"></script> -->
+	<!-- <script type="text/javascript" src="lib/impact/impact.js"></script> -->
+	<!-- <script type="text/javascript" src="lib/game/main.js"></script> -->
+	<script type="text/javascript" src="game.min.js"></script>
 </head>
 <body>
+    <h3>@TADDEIMANIA February One Game A Month</h3>
+    <h3>Super Swing'n Smash</h3>
 	<canvas id="canvas" style="border: 10px grey dotted"></canvas>
 </body>
 </html>
