--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		}
 	</style>
 
-	<!-- <script type="text/javascript" src="lib/impact/impact.js"></script> -->
-	<!-- <script type="text/javascript" src="lib/game/main.js"></script> -->
-	<script type="text/javascript" src="game.min.js"></script>
+	<script type="text/javascript" src="lib/impact/impact.js"></script>
+	<script type="text/javascript" src="lib/game/main.js"></script>
+	<!-- <script type="text/javascript" src="game.min.js"></script> -->
 </head>
 <body>
     <h3>@TADDEIMANIA February One Game A Month</h3>
